Fix layout issues

--- a/version-E/src/index.css
+++ b/version-E/src/index.css
@@ -34,3 +34,9 @@ code {
 .highlight-word {
   color: orangered;
 }
+
+@media (min-width: 768px) {
+  .container-lg {
+    max-width: 720px;
+  }
+}
